--- a/render.yaml
+++ b/render.yaml
@@ -5,18 +5,14 @@ services:
     autoDeploy: true
     dockerfilePath: ./Dockerfile
     healthCheckPath: /
-    buildCommand: |
-      pip install -r requirements.txt
-      playwright install-deps
-      playwright install chrome
     envVars:
       # --- Browser & Headless ---
       - key: HEADLESS
         value: "1"
       - key: BROWSER_CHANNEL
-        value: "chrome"   # prefer Chrome
-      - key: BROWSER
-        value: "chromium" # fallback (Playwright API uses chromium.launch)
+        value: "chrome"   # prefer Chrome (Playwright will fall back to Chromium in your code)
+      # - key: BROWSER
+      #   value: "chromium"  # not needed; your code launches chromium with channel=chrome
 
       # --- Model / Hugging Face ---
       - key: MODEL_ID
@@ -25,13 +21,11 @@ services:
         value: "/data/.cache/huggingface"
       - key: HF_HUB_ENABLE_HF_TRANSFER
         value: "1"
-      # uncomment if model repo is private
+      # If your model repo is private, uncomment:
       # - key: HF_TOKEN
       #   sync: false
 
       # --- Optional Behavior Flags ---
-      - key: ENABLE_GPT_OSS
-        value: "0"
       - key: MAX_AGENT_TURNS
         value: "6"
       - key: GEN_MAX_CONCURRENCY
