--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi>=0.110,<0.115
-uvicorn[standard]>=0.23,<0.31
-pydantic>=2.5,<3.0
-playwright>=1.42,<1.48
-transformers>=4.46,<4.47
-torch>=2.2,<2.4
-accelerate>=0.34,<1.0
-safetensors>=0.4,<0.5
-sentencepiece>=0.1.99,<0.3
-hf-transfer>=0.1.6
-
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.9.2
+playwright==1.47.2
+transformers==4.44.2
+accelerate==0.34.2
+huggingface_hub==0.24.6
+safetensors==0.4.3
+sentencepiece==0.2.0
+torch==2.3.1
+hf-transfer==0.1.6
